koomgr/yaml/goinkube/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    control-plane: koobind-manager
  name: koo-system
---
apiVersion: v1
kind: Service
metadata:
  name: koo-auth-service
  namespace: koo-system
spec:
  ports:
  - port: 444
    targetPort: 8444
  selector:
    control-plane: koobind-manager
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/allow-shared-ip: tcp1
  name: koo-goinkube-ssh
  namespace: koo-system
spec:
  loadBalancerIP: 192.168.56.91
  ports:
  - port: 22
    protocol: TCP
    targetPort: 22
  selector:
    control-plane: koobind-manager
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: koo-webhook-service
  namespace: koo-system
spec:
  ports:
  - port: 443
    targetPort: 8443
  selector:
    control-plane: koobind-manager
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    control-plane: koobind-manager
  name: koo-manager
  namespace: koo-system
spec:
  replicas: 1
  selector:
    matchLabels:
      control-plane: koobind-manager
  template:
    metadata:
      labels:
        control-plane: koobind-manager
    spec:
      containers:
      - env:
        - name: KOO_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: ghcr.io/sergealexandre/goinkube:1.19-0
        imagePullPolicy: Always
        name: manager
        ports:
        - containerPort: 8443
          name: webhook-server
          protocol: TCP
        - containerPort: 8444
          name: auth-server
          protocol: TCP
        volumeMounts:
        - mountPath: /tmp/k8s-webhook-server/serving-certs
          name: cert
          readOnly: true
        - mountPath: /work
          name: work
      securityContext:
        runAsNonRoot: false
      serviceAccountName: koo-manager
      terminationGracePeriodSeconds: 10
      volumes:
      - name: cert
        secret:
          defaultMode: 420
          secretName: webhook-server-cert
      - name: work
        persistentVolumeClaim:
          claimName: koo-goinkube-work
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: koo-koobind-selfsigned
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
  name: koo-auth-ingress
  namespace: koo-system
spec:
  ingressClassName: nginx
  rules:
  - host: auth.kspray5
    http:
      paths:
      - backend:
          service:
            name: koo-auth-service
            port:
              number: 444
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - auth.kspray5
    secretName: auth-server-cert
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: koo-system/koo-serving-cert
  name: koo-mutating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: koo-webhook-service
      namespace: koo-system
      path: /mutate-directory-koobind-io-v1alpha1-group
  failurePolicy: Fail
  name: mgroup.kb.io
  rules:
  - apiGroups:
    - directory.koobind.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - groups
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: koo-webhook-service
      namespace: koo-system
      path: /mutate-directory-koobind-io-v1alpha1-groupbinding
  failurePolicy: Fail
  name: mgroupbinding.kb.io
  rules:
  - apiGroups:
    - directory.koobind.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - groupbindings
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: koo-webhook-service
      namespace: koo-system
      path: /mutate-directory-koobind-io-v1alpha1-user
  failurePolicy: Fail
  name: muser.kb.io
  rules:
  - apiGroups:
    - directory.koobind.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - users
  sideEffects: None
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: koo-system/koo-serving-cert
  name: koo-validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: koo-webhook-service
      namespace: koo-system
      path: /validate-directory-koobind-io-v1alpha1-group
  failurePolicy: Fail
  name: vgroup.kb.io
  rules:
  - apiGroups:
    - directory.koobind.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - groups
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: koo-webhook-service
      namespace: koo-system
      path: /validate-directory-koobind-io-v1alpha1-groupbinding
  failurePolicy: Fail
  name: vgroupbinding.kb.io
  rules:
  - apiGroups:
    - directory.koobind.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - groupbindings
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: koo-webhook-service
      namespace: koo-system
      path: /validate-directory-koobind-io-v1alpha1-user
  failurePolicy: Fail
  name: vuser.kb.io
  rules:
  - apiGroups:
    - directory.koobind.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - users
  sideEffects: None
